# PyOxidizer

./: .env.example  .gitignore  Cargo.toml  Justfile  MANIFEST.in  NOTES.md  pyoxidizer.bzl  pyproject.toml  setup.py
.github/workflows/: build-exe.yml  cargo_deny.yml  oxidized_importer.yml  pyoxidizer.yml  pyoxy.yml  sphinx.yml  workspace-python.yml  workspace.yml
cargolike/: Cargo.toml
cargolike/src/: lib.rs  shell.rs  style.rs
ci/: install-rust-linux.sh  install-rust-macos.sh  linux-portable-binary.Dockerfile
docs/: requirements.txt
pyembed/: Cargo.toml  deny.toml
pyembed-bench/: Cargo.toml
pyembed-bench/benches/: oxidized_finder.rs  zip.rs
pyembed-bench/src/: lib.rs
pyembed/docs/: pyembed_interpreter_config.rst
pyembed/src/: conversion.rs  error.rs  interpreter.rs
pyembed/src/test/: importer.rs  interpreter_config.rs  main_python_interpreter.rs  python_resources.rs  test_importer_indexing.py  test_importer_metadata.py  test_importer_module.py
pyoxidizer/: Cargo.toml
pyoxidizer/docs/: pyoxidizer_config_type_python_distribution.rst  pyoxidizer_distributing_windows.rst  pyoxidizer_faq.rst  pyoxidizer_getting_started.rst  pyoxidizer_history.rst  pyoxidizer_managing_projects.rst  pyoxidizer_packaging_python_distributions.rst  pyoxidizer_packaging_python_files.rst  pyoxidizer_rust_projects.rst  pyoxidizer_status.rst
pyoxidizer/src/: cli.rs  default_python_distributions.rs  environment.rs  lib.rs  licensing.rs  main.rs  project_building.rs  project_layout.rs  projectmgmt.rs  shell.rs  testutil.rs
pyoxidizer/src/py_packaging/: binary.rs  distribution.rs  distutils.rs  embedding.rs  libpython.rs  packaging_tool.rs  standalone_builder.rs  standalone_distribution.rs
pyoxidizer/src/starlark/: file.rs  file_resource.rs  python_distribution.rs  python_executable.rs  python_extension_module.rs  python_interpreter_config.rs  python_module_source.rs  python_package_distribution_resource.rs  python_package_resource.rs  python_packaging_policy.rs  python_resource.rs
pyoxidizer/src/templates/: cargo-extra.toml.hbs
pyoxidizer/tests/cmd/: help.trycmd
pyoxy/: Cargo.toml  build.rs
pyoxy/docs/: pyoxy_interpreter_config.rst
python-oxidized-importer/: Cargo.toml  build.rs
python-oxidized-importer/docs/: oxidized_importer_getting_started.rst  oxidized_importer_history.rst
python-oxidized-importer/python/: __init__.py
python-oxidized-importer/src/: conversion.rs  importer.rs  lib.rs  package_metadata.rs  path_entry_finder.rs  pkg_resources.rs  python_resource_collector.rs  python_resource_types.rs  python_resources.rs  resource_reader.rs  resource_scanning.rs  zip_import.rs
python-packaging/: Cargo.toml
python-packaging/src/: licensing.rs  policy.rs  resource_collection.rs  wheel.rs
python-packed-resources/: Cargo.toml
python-packed-resources/src/: parser.rs
release/: Cargo.toml
release/src/: documentation.rs  main.rs
scripts/: fetch-python-distributions.py  requirements.txt  run-pyembed-tests.py
starlark-dialect-build-targets/: Cargo.toml
starlark-dialect-build-targets/src/: lib.rs
tugger/: Cargo.toml
tugger-apple/: Cargo.toml
tugger-binary-analysis/: Cargo.toml
tugger-binary-analysis/src/: audit.rs
tugger-code-signing/: Cargo.toml
tugger-code-signing/src/: lib.rs
tugger-common/: Cargo.toml
tugger-common/src/: http.rs
tugger-rust-toolchain/: Cargo.toml
tugger-rust-toolchain/src/: lib.rs  manifest.rs
tugger-snapcraft/: Cargo.toml
tugger-windows/: Cargo.toml
tugger-windows-codesign/: Cargo.toml
tugger-windows-codesign/src/: lib.rs  signing.rs
tugger-wix/: Cargo.toml
tugger-wix/src/: installer_builder.rs
tugger/src/starlark/: code_signing.rs  file_content.rs  file_manifest.rs  mod.rs  snapcraft.rs  terminal.rs  wix_msi_builder.rs
