[package]
name = "pyembed-bench"
version = "0.1.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "Python-2.0 OR MPL-2.0"
description = "Benchmarks for the pyembed crate"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[package.metadata.release]
# Internal package is never released.
release = false

[dependencies]
anyhow = "1.0.98"
once_cell = "1.21.3"
pyo3 = "0.25.1"
tempfile = "3.20.0"
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }

[dependencies.pyembed]
version = "0.26.0"
path = "../pyembed"
default-features = false
features = ["zipimport"]

[dependencies.pyoxidizer]
version = "0.125.0"
path = "../pyoxidizer"

[dependencies.python-oxidized-importer]
version = "0.10.0"
path = "../python-oxidized-importer"
default-features = false
features = ["zipimport"]

[dependencies.python-packaging]
version = "0.17.0"
path = "../python-packaging"

[dependencies.python-packed-resources]
version = "0.13.0"
path = "../python-packed-resources"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "zip"
harness = false

[[bench]]
name = "oxidized_finder"
harness = false

[[bench]]
name = "embedded_interpreter"
harness = false
