[package]
name = "release"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
description = "Performs a release of PyOxidizer"
license = "MPL-2.0"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[package.metadata.release]
# Internal package is never released.
release = false

[dependencies]
anyhow = "1.0.98"
cargo-lock = "10.1.0"
cargo_toml = "0.22.3"
clap = "4.5.43"
duct = "1.1.0"
# We don't need network functionality.
git2 = { version = "0.20.2", default-features = false }
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
rustdoc-types = "0.56.0"
semver = "1.0.26"
serde_json = "1.0.142"
tempfile = "3.20.0"
toml = "0.9.5"
url = "2.5.4"
