[package]
name = "tugger-apple"
version = "0.9.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Random functionality related to Apple platforms"
keywords = ["tugger", "apple", "macos"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
goblin = "0.10.0"
scroll = "0.13.0"
thiserror = "2.0.12"
