[package]
name = "tugger-binary-analysis"
version = "0.7.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Inspect platform binaries"
keywords = ["tugger"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
goblin = "0.10.0"
once_cell = "1.21.3"
version-compare = "0.2.0"
