[package]
name = "tugger-common"
version = "0.11.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Common functionality used by various tugger crates"
keywords = ["tugger"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
fs2 = "0.4.3"
glob = "0.3.2"
hex = "0.4.3"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features= false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
tempfile = "3.20.0"
url = "2.5.4"
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
