[package]
name = "tugger-rust-toolchain"
version = "0.13.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Discover, download, and use Rust toolchains"
keywords = ["rustup"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
fs2 = "0.4.3"
hex = "0.4.3"
log = "0.4.27"
once_cell = "1.21.3"
pgp = "0.16.0"
sha2 = "0.10.9"
simple-file-manifest = "0.11.0"
tar = "0.4.44"
toml = "0.9.5"
xz2 = { version = "0.1.7", features = ["static"] }
zstd = "0.13.3"

[dependencies.tugger-common]
version = "0.10.0-pre"
path = "../tugger-common"

[dev-dependencies]
dirs = "6.0.0"
tempfile = "3.20.0"
