[package]
name = "tugger-snapcraft"
version = "0.16.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Snapcraft packaging primitives"
keywords = ["package", "snapcraft", "tugger"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
duct = "1.1.0"
log = "0.4.27"
remove_dir_all = "1.0.0"
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
simple-file-manifest = "0.11.0"

[dependencies.tugger-common]
version = "0.11.0"
path = "../tugger-common"
