[package]
name = "tugger-windows"
version = "0.10.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Collection of packaging primitives specific to Windows"
keywords = ["tugger", "windows"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
glob = "0.3.2"
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
duct = "1.1.0"
find-winsdk = "0.2.0"
semver = "1.0.26"
winapi = { version = "0.3.9", features = ["combaseapi", "knownfolders", "shlobj", "shtypes"] }

[dependencies.tugger-common]
version = "0.10.0-pre"
path = "../tugger-common"
