[package]
name = "tugger-wix"
version = "0.16.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Interfaces to the WiX Toolset to produce Windows installers"
keywords = ["package", "tugger", "windows", "wix", "wix-toolset"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
duct = "1.1.0"
log = "0.4.27"
once_cell = "1.21.3"
simple-file-manifest = "0.11.0"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "v5"] }
xml-rs = "0.8.27"

[dependencies.tugger-common]
version = "0.10.0-pre"
path = "../tugger-common"

[dependencies.tugger-windows-codesign]
version = "0.10.0-pre"
path = "../tugger-windows-codesign"

[dependencies.tugger-windows]
version = "0.10.0-pre"
path = "../tugger-windows"

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(windows)'.dev-dependencies]
msi = "0.9.0"
