[package]
name = "tugger"
version = "0.19.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Package and distribute applications"
keywords = ["package"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
apple-bundles = "0.21.0"
atty = "0.2.14"
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
dialoguer = "0.11.0"
linked-hash-map = "0.5.6"
log = "0.4.27"
plist = "1.7.4"
simple-file-manifest = "0.11.0"
starlark = "0.3.2"
tar = "0.4.44"
tempfile = "3.20.0"
time = "0.3.41"
walkdir = "2.5.0"

[dependencies.python-packaging]
version = "0.17.0"
path = "../python-packaging"

[dependencies.starlark-dialect-build-targets]
version = "0.9.0"
path = "../starlark-dialect-build-targets"

[dependencies.tugger-apple]
version = "0.9.0"
path = "../tugger-apple"

[dependencies.tugger-code-signing]
version = "0.11.0"
path = "../tugger-code-signing"

[dependencies.tugger-common]
version = "0.11.0"
path = "../tugger-common"

[dependencies.tugger-snapcraft]
version = "0.16.0"
path = "../tugger-snapcraft"

[dependencies.tugger-windows]
version = "0.11.0"
path = "../tugger-windows"

[dependencies.tugger-wix]
version = "0.17.0"
path = "../tugger-wix"

[dev-dependencies]
apple-codesign = "0.29.0"
chrono = "0.4.41"
tempfile = "3.20.0"
x509-certificate = "0.24.0"

[dev-dependencies.tugger-windows-codesign]
version = "0.11.0"
path = "../tugger-windows-codesign"
